fix: 修复顶栏背景不跟随主题色变化的问题
- 在CSS变量中添加顶栏颜色变量的支持（--header-bg-light/--header-bg-dark等）
- 在颜色生成函数中添加generateHeaderVariables函数
- 支持背景跟随主题色功能，在深色/浅色模式下都能正确响应主题变化
- 顶栏现在可以根据用户的主题偏好设置动态改变背景色

--- a/internal/eslint-config/package.json
+++ b/internal/eslint-config/package.json
@@ -22,7 +22,9 @@
     "eslint": "catalog:",
     "@typescript-eslint/eslint-plugin": "catalog:",
     "@typescript-eslint/parser": "catalog:",
-    "eslint-plugin-import-x": "catalog:"
+    "eslint-plugin-import-x": "catalog:",
+    "eslint-plugin-vue": "catalog:",
+    "vue-eslint-parser": "catalog:"
   },
   "peerDependencies": {
     "eslint": "^9.0.0",
