--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -39,6 +39,8 @@ catalog:
   element-plus: ^2.13.1
   eslint: ^9.39.2
   eslint-plugin-import-x: ^4.16.1
+  eslint-plugin-vue: ^10.7.0
+  vue-eslint-parser: ^10.2.0
   glob: ^13.0.0
   husky: ^9.1.7
   lint-staged: ^16.2.7
