--- a/packages/preferences/vue/package.json
+++ b/packages/preferences/vue/package.json
@@ -28,7 +28,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build && vite build --config vite.cdn.config.ts",
+    "build": "vite build && vite build --config vite.cdn.config.ts --mode production && vite build --config vite.cdn.config.ts --mode development",
     "dev": "vite build --watch",
     "test": "vitest",
     "test:run": "vitest run",
