--- a/packages/preferences/vue/package.json
+++ b/packages/preferences/vue/package.json
@@ -32,7 +32,7 @@
     "dev": "vite build --watch",
     "test": "vitest",
     "test:run": "vitest run",
-    "lint": "eslint src",
+    "lint": "eslint src --max-warnings=0",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
