--- a/packages/table/core/package.json
+++ b/packages/table/core/package.json
@@ -45,7 +45,7 @@
     "bench:column-custom:check": "pnpm run build && node ./scripts/benchmark-column-custom.mjs --check",
     "test": "vitest",
     "test:run": "vitest run",
-    "lint": "eslint src",
+    "lint": "eslint src --max-warnings=0",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
