--- a/packages/tabs/core/package.json
+++ b/packages/tabs/core/package.json
@@ -40,7 +40,7 @@
     "dev": "tsup --watch",
     "test": "vitest",
     "test:run": "vitest run",
-    "lint": "eslint src",
+    "lint": "eslint src --max-warnings=0",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
